user roles and permissions

--- a/accounting/templates/accounting/journal/journal_list.html
+++ b/accounting/templates/accounting/journal/journal_list.html
@@ -35,7 +35,7 @@
                     </tbody>
                 </table>
             </div>
-            {%if object_list%}
+            {%if journal_entries%}
             {% include 'pagination.html' %}
             {%endif%}
         </div>
